[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/HitBoxArea2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/HurtBoxArea2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://VFX/Explosion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Enemies/EnemyBaseClass.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 44, 46 )

[sub_resource type="Animation" id=6]
resource_name = "Explosion"
length = 1.2
tracks/0/type = "animation"
tracks/0/path = NodePath("EnemyPath/EnemyUnit/Explosion/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "Explode" ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Invasion"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyPath/EnemyUnit/Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "invasion_completed" ],
"method": "emit_signal"
} ]
}

[node name="Enemy" type="Node2D"]
script = ExtResource( 5 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = null

[node name="EnemyUnit" type="PathFollow2D" parent="EnemyPath"]
rotation = 0.821454

[node name="HurtBoxArea2D" parent="EnemyPath/EnemyUnit" instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPath/EnemyUnit/HurtBoxArea2D"]
position = Vector2( 0, -2.15491 )

[node name="Sprite" type="Sprite" parent="EnemyPath/EnemyUnit"]
rotation = -1.5708

[node name="HitBoxArea2D" parent="EnemyPath/EnemyUnit" instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyPath/EnemyUnit/HitBoxArea2D"]
shape = SubResource( 5 )

[node name="Explosion" parent="EnemyPath/EnemyUnit" instance=ExtResource( 3 )]
rotation = -0.821454

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Explosion = SubResource( 6 )
anims/Invasion = SubResource( 7 )

[connection signal="hit_landed" from="EnemyPath/EnemyUnit/HurtBoxArea2D" to="." method="_on_HurtBoxArea2D_hit_landed"]
